# fork.belalang

./: .bazelignore  .gitmodules  Cargo.toml  MODULE.bazel  shell.nix
brt/core/src/mmtk/: mod.rs
crates/belalang_ast/src/: expressions.rs  lib.rs  parser.rs
crates/belalang_ast/tests/testsuite/: expressions.rs  main.rs  statements.rs
crates/belalang_codegen_wasm/: Cargo.toml
crates/belalang_codegen_wasm/src/: main.rs
crates/belalang_parse/: Cargo.toml
crates/belalang_parse/src/: lexer.rs  lib.rs
crates/belalang_parse/tests/testsuite/: main.rs
devtools/belalang_dev_tools/: Cargo.toml
devtools/belalang_dev_tools/interactive/: lexer.rs  parser.rs
devtools/btest/: Cargo.toml
devtools/btest/src/: main.rs
