module(
    name = "belalang",
    version = "0.0",
)

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "toolchains_llvm", version = "1.7.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "rules_python", version = "2.0.1", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_3_11_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pypi")

git_override(
    module_name = "hedron_compile_commands",
    commit = "26a1ba52bd76aa3d95fa7278a9696d51f7946612",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
)

llvm = use_extension("//third_party:llvm-project.bzl", "llvm")
use_repo(llvm, "llvm-raw", "llvm_config", "llvm_zlib", "llvm_zstd", "llvm-project")

llvm_toolchain = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm_toolchain.toolchain(
    llvm_version = "20.1.4",
)
use_repo(llvm_toolchain, "llvm_toolchain")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["nightly/2026-01-22"],
)
use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "anyhow",
    version = "1.0.100",
)
crate.spec(
    package = "bincode",
    version = "2.0.1",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.4",
)
crate.spec(
    package = "crc32fast",
    version = "1.5.0",
)
crate.spec(
    package = "libc",
    version = "0.2.177",
)
crate.spec(
    package = "proc-macro2",
    version = "1.0",
)
crate.spec(
    package = "quote",
    version = "1.0",
)
crate.spec(
    package = "serde",
    version = "1.0.219",
)
crate.spec(
    package = "syn",
    version = "2.0",
)
crate.spec(
    package = "thiserror",
    version = "2.0.0",
)
crate.spec(
    package = "tracing",
    version = "0.1.43",
)
crate.spec(
    package = "tracing-subscriber",
    version = "0.3.22",
)
crate.spec(
    package = "unicode-ident",
    version = "1.0.18",
)
crate.spec(
    features = [
        "Win32_System_SystemInformation",
        "Win32_System_Memory",
        "Win32_Foundation",
    ],
    package = "windows-sys",
    version = "0.61.2",
)
crate.spec(
    package = "walkdir",
    version = "2.5.0",
)
crate.spec(
    package = "cxx",
    version = "1.0.194",
)
crate.spec(
    package = "glob",
    version = "0.3.3",
)
crate.spec(
    package = "similar",
    version = "2.7.0",
)
crate.spec(
    package = "console",
    version = "0.16.2",
)
crate.from_specs()
use_repo(crate, "crates")

register_toolchains("@rust_toolchains//:all")
register_toolchains("@llvm_toolchain//:all")
