[package]
name = "belalang_dev_tools"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "lexer"
path = "interactive/lexer.rs"
required-features = ["interactive"]

[[bin]]
name = "parser"
path = "interactive/parser.rs"
required-features = ["interactive"]

[features]
interactive = ["dep:belalang_ast", "belalang_parse"]

[lints]
workspace = true

[dependencies]
belalang_ast = { workspace = true, optional = true }
belalang_parse = { workspace = true, optional = true }
belalang_vm.workspace = true
belalang_bytecode.workspace = true
