[package]
name = "btest"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
walkdir = "2.5.0"
glob = "0.3.3"
similar = "2.7.0"
console = "0.16.2"
anyhow = { workspace = true }
belalang_ast = { workspace = true }
belalang_parse = { workspace = true }
clap = { workspace = true, features = ["derive"] }
